--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0 auto;
+}
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -5,4 +9,121 @@
   font-size: 16px;
   line-height: 20px;
   margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  background-color: #fff;
+  background-image: url(../images/background_header.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat:no-repeat;
+  height: 800px;
+  padding: 30px;
+  flex-direction: column;
+ }
+
+ .nav {
+  margin-right: 50px;
+  display: flex;
+  justify-content: space-between;
+ }
+
+ .nav__logo-image {
+  position: relative;
+ }
+
+ .nav__links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  font-weight: 500;
+ }
+
+ .header__title {
+  max-width: 729px;
+  margin-top: 183px;
+  margin-left: 50px;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+ }
+
+ .header__span-accent {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-size: 60px;
+  line-height: 72px;
+  color: #3F96F3;
+ }
+
+ .header__description {
+  max-width: 683px;
+  margin-top: 28px;
+  margin-left: 50px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+ }
+
+ .header__image {
+  width: 646px;
+  height: 569px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+ }
+
+ .header__footer {
+  margin: auto 50px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-weight: 500;
+  color: #6f6f6f
+ }
+
+.header__paragraph {
+  margin: 0;
+}
+
+.recipes {
+  background-color: #0A2750;
+  background-image: url(../images/background_recipes.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 80px;
+}
+
+.recipes__title {
+  max-width: 580px;
+  margin-top: 20px;
+}
+
+.recipes__subtitles {
+  max-width: 438px;
+  margin-top: 24px;
+  margin-left: 80px;
+}
+
+.recipes__videos {
+  margin-top: 80px;
+  margin-bottom: 215px;
+
+}
+
+.recipes__iframe {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 40px;
+}
+
+.recipes__video {
+  width: 480px;
+  height: 273px;
 }
