--- a/pages/index.css
+++ b/pages/index.css
@@ -90,6 +90,12 @@ body {
   margin: 0;
 }
 
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 .recipes {
   background-color: #0A2750;
   background-image: url(../images/background_recipes.svg);
@@ -97,33 +103,46 @@ body {
   background-position: center;
   background-size: cover;
   padding: 80px;
+  color: #fff;
 }
 
 .recipes__title {
   max-width: 580px;
   margin-top: 20px;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
 .recipes__subtitles {
   max-width: 438px;
   margin-top: 24px;
-  margin-left: 80px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .recipes__videos {
   margin-top: 80px;
   margin-bottom: 215px;
-
-}
-
-.recipes__iframe {
+  font-size: 20px;
+  line-height: 30px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 40px;
 }
 
-.recipes__video {
-  width: 480px;
+.recipes__iframe {
+  width: 400px;
   height: 273px;
+}
+
+.recipes__video-caption {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
