--- a/pages/index.css
+++ b/pages/index.css
@@ -114,7 +114,7 @@ iframe {
   line-height: 52px;
 }
 
-.recipes__subtitles {
+.recipes__subtitle {
   max-width: 438px;
   margin-top: 24px;
   font-family: "Noto Serif", "Times New Roman", serif;
