--- a/pages/index.css
+++ b/pages/index.css
@@ -1,224 +1,8 @@
-body {
-  margin: 0 auto;
-}
-
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  font-family: Inter, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0 auto;
-}
-
-.header {
-  display: flex;
-  background-color: #fff;
-  background-image: url(../images/background_header.svg);
-  background-size: cover;
-  background-position: center;
-  background-repeat:no-repeat;
-  height: 800px;
-  padding: 30px;
-  flex-direction: column;
- }
-
- .nav {
-  margin-right: 50px;
-  display: flex;
-  justify-content: space-between;
- }
-
- .nav__logo-image {
-  position: relative;
- }
-
- .nav__links {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 20px;
-  font-weight: 500;
- }
-
- .header__title {
-  max-width: 729px;
-  margin-top: 183px;
-  margin-left: 50px;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
- }
-
- .header__span-accent {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3F96F3;
- }
-
- .header__description {
-  max-width: 683px;
-  margin-top: 28px;
-  margin-left: 50px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
- }
-
- .header__image {
-  width: 646px;
-  height: 569px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
- }
-
- .header__footer {
-  margin: auto 50px 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  font-weight: 500;
-  color: #6f6f6f
- }
-
-.header__paragraph {
-  margin: 0;
-}
-
-iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.recipes {
-  background-color: #0A2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 80px;
-  color: #fff;
-}
-
-.recipes__title {
-  max-width: 580px;
-  margin-top: 20px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin-top: 24px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  margin-top: 80px;
-  margin-bottom: 215px;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 40px;
-}
-
-.recipes__iframe {
-  width: 400px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.reservation {
-  background-color: #D9E7FF;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.reservation_format {
-  display: flex;
-  flex-direction: column;
-}
-
-.reservation__title {
-  margin: 100px auto 0;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 80px auto 120px;
-  display: flex;
-  flex-direction: column;
-}
-
-.form__fieldset {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  margin-top: 32px;
-  font-weight: 500;
-  color: #000;
-}
-
-.form__label_last {
-  margin: 32px auto 0;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.form__input {
-  margin-top: 8px;
-  border-radius: 4px;
-  border: 1px solid #838383;
-  max-width: 385px;
-  padding: 15px 20px 15px;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__button {
-  border-radius: 4px;
-  color: #fff;
-  background-color: #1878DC;
-  margin: 32px 0 0;
-  padding: 20px;
-  font-weight: 500;
-  font-size: 20px;
-}
-
-.form__button:hover {
-  background-color: #3F96F3;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
