--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,6 @@
 @import url(../blocks/reservation.css);
 @import url(../blocks/menu.css);
 @import url(../blocks/about.css);
+@import url(../blocks/cards.css);
 @import url(../blocks/footer.css);
+@import url(../blocks/form.css);
