--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -10,7 +10,7 @@ iframe {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 80px;
+  padding: 100px 80px 215px;
   color: #fff;
 }
 
