--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,4 +1,12 @@
- .nav {
+  @keyframes switch {
+    from {
+      color: #000;
+    }
+    to {
+      color: #3f96f3;
+    }
+  }
+  .nav {
   margin-right: 50px;
   display: flex;
   justify-content: space-between;
@@ -6,6 +14,8 @@
 
  .nav__logo-image {
   position: relative;
+  width: 105px;
+  height: 39px;
  }
 
  .nav__links {
@@ -14,4 +24,13 @@
   justify-content: space-between;
   gap: 20px;
   font-weight: 500;
+ }
+
+ .nav__link {
+  text-decoration: none;
+  color: #000;
+ }
+
+ .nav__link:hover {
+  animation: switch 0.25s ease-in-out alternate forwards;
  }
