--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,7 +18,6 @@
 }
 
 .footer__content {
-  margin: 60px 80px 108px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -58,7 +57,7 @@
 }
 
 .footer__social-link:hover {
-  animation: blink 1.5s linear 0 infinite;
+  animation: blink 1.5s linear 0;
   opacity: 0.7;
   cursor: pointer;
 }
@@ -73,5 +72,5 @@
   font-size: 16px;
   font-weight: normal;
   color: white;
-  margin: 0 0 60px 80px;
+  margin: 108px 0 0;
 }
