--- a/blocks/header.css
+++ b/blocks/header.css
@@ -12,15 +12,16 @@
 
  .header__title {
   max-width: 729px;
-  margin-top: 183px;
-  margin-left: 50px;
+  margin: 183px 0 0 50px;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
   letter-spacing: -0.6px;
+  z-index: 1;
  }
 
  .header__span-accent {
+  display: block;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-size: 60px;
@@ -30,11 +31,11 @@
 
  .header__description {
   max-width: 683px;
-  margin-top: 28px;
-  margin-left: 50px;
+  margin: 28px 0 0 50px;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
+  z-index: 1;
  }
 
  .header__image {
