--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,4 +1,4 @@
-iframe {
+.recipes__iframe {
   width: 100%;
   height: 100%;
   border: none;
@@ -32,7 +32,6 @@ iframe {
 
 .recipes__videos {
   margin-top: 80px;
-  margin-bottom: 215px;
   font-size: 20px;
   line-height: 30px;
   display: flex;
@@ -42,7 +41,7 @@ iframe {
 }
 
 .recipes__iframe {
-  width: 400px;
+  width: 480px;
   height: 273px;
 }
 
