--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -10,8 +10,12 @@
 }
 
 .reservation__title {
-  margin: 100px auto 0;
+  margin: 0 auto;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+}
+
+.reservation__form {
+  margin: 0 auto;
 }
